--- a/debuggingApp/index.html
+++ b/debuggingApp/index.html
@@ -17,8 +17,9 @@
     <script>
       console.warn(this.locize);
       this.locize.showLocizeLink({
-        projectId: 'eca68e42-2513-48a9-8616-6b6c2bd7ccd2',
+        projectId: '3f71a25a-00db-4780-adcf-6a07dc96e00f',
         version: 'latest',
+        // editorUrl: 'https://dev.locize.app'
       });
       // var NAMESPACE = 'translations';
       // var PROJECTID = '832e1b7a-fb77-4a10-b3cb-78b75e0b78db';
