This module can now be used for both type of incontext editors - as iframe (old) or with iframe (new).

--- a/debuggingApps/old/index.html
+++ b/debuggingApps/old/index.html
@@ -31,12 +31,12 @@
       </div>
     </div>
     <script>
-      // console.warn(this.locize, this.i18next);
-      this.locize.showLocizeLink({
-        projectId: '3f71a25a-00db-4780-adcf-6a07dc96e00f',
-        version: 'latest',
-        // editorUrl: 'https://dev.locize.app'
-      });
+      // // console.warn(this.locize, this.i18next);
+      // this.locize.showLocizeLink({
+      //   projectId: '3f71a25a-00db-4780-adcf-6a07dc96e00f',
+      //   version: 'latest',
+      //   // editorUrl: 'https://dev.locize.app'
+      // });
 
       i18next.use(this.locize.locizePlugin);
       i18next.init(
