--- a/debuggingApps/demo/index.html
+++ b/debuggingApps/demo/index.html
@@ -3,6 +3,11 @@
   <head>
     <script src="https://unpkg.com/i18next/i18next.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/loc-i18next@0.1.5/dist/umd/loc-i18next.min.js"></script>
+    <style>
+      div.filler {
+        margin: 300px 10px;
+      }
+    </style>
   </head>
   <body id="main">
     <h1 id="maintitle" data-i18n="title">Test on text node</h1>
@@ -14,6 +19,7 @@
     </div>
     <h4 id="subtitle" data-i18n="title">Test on text node</h4>
     <hr />
+    <div class="filler"></div>
     <div>
       Some more tests on attributes:
       <h4>title:</h4>
@@ -41,6 +47,7 @@
       />
     </div>
     <hr />
+    <div class="filler"></div>
     <div>dynamically removed:</div>
     <div id="removeFromInner">
       <p data-i18n="removed">Test on removed node</p>
