--- a/debuggingApps/old/index.html
+++ b/debuggingApps/old/index.html
@@ -39,6 +39,7 @@
       // });
 
       i18next.use(this.locize.locizePlugin);
+      // i18next.use(this.locize.locizeEditorPlugin());
       i18next.init(
         {
           lng: 'en',
