--- a/debuggingApps/old/index.html
+++ b/debuggingApps/old/index.html
@@ -38,8 +38,8 @@
       //   // editorUrl: 'https://dev.locize.app'
       // });
 
-      i18next.use(this.locize.locizePlugin);
-      // i18next.use(this.locize.locizeEditorPlugin());
+      // i18next.use(this.locize.locizePlugin);
+      i18next.use(this.locize.locizeEditorPlugin({ show: true }));
       i18next.init(
         {
           lng: 'en',
