--- a/debuggingApps/demo/index.html
+++ b/debuggingApps/demo/index.html
@@ -9,54 +9,81 @@
       }
     </style>
   </head>
-  <body id="main">
-    <h1 id="maintitle" data-i18n="title">Test on text node</h1>
-
-    <div>
-      <p data-i18n="[title]test.title;[html]introduction">
-        Test on another node
+  <body>
+    <div id="main">
+      <h1 id="maintitle" data-i18n="title">Test on text node</h1>
+      <!-- 
+      <div>
+        <p data-i18n="[title]test.title;[html]introduction">
+          Test on another node
+        </p>
+      </div>
+      <h4 id="subtitle" data-i18n="title">Test on text node</h4>
+      <hr />
+      <div class="filler"></div>
+      <div>
+        Some more tests on attributes:
+        <h4>title:</h4>
+        <a
+          href="/docs/ecosystem/#postprocessors"
+          title="Works on title"
+          data-i18n="[title]test.title;common:button.hoverMe"
+        >
+          hover me
+        </a>
+        <h4>placeholder:</h4>
+        <input
+          type="text"
+          placeholder="translated placeholder"
+          data-i18n="[placeholder]test.placeholder"
+        />
+      </div>
+      <div>
+        <h4>image - alt tag:</h4>
+        <img
+          src="https://locize.com/img/locize_white.svg"
+          alt="big a"
+          style="width: 200px; background-color: #ccc"
+          data-i18n="[alt]test.alt"
+        />
+      </div>
+      <p data-i18n="translation:addedAfterInit">
+        This node was added after init locize
       </p>
-    </div>
-    <h4 id="subtitle" data-i18n="title">Test on text node</h4>
-    <hr />
-    <div class="filler"></div>
-    <div>
-      Some more tests on attributes:
-      <h4>title:</h4>
-      <a
-        href="/docs/ecosystem/#postprocessors"
-        title="Works on title"
-        data-i18n="[title]test.title;common:button.hoverMe"
-      >
-        hover me
-      </a>
-      <h4>placeholder:</h4>
-      <input
-        type="text"
-        placeholder="translated placeholder"
-        data-i18n="[placeholder]test.placeholder"
-      />
-    </div>
-    <div>
-      <h4>image - alt tag:</h4>
-      <img
-        src="https://locize.com/img/locize_white.svg"
-        alt="big a"
-        style="width: 200px; background-color: #ccc"
-        data-i18n="[alt]test.alt"
-      />
-    </div>
-    <hr />
-    <div class="filler"></div>
-    <div>dynamically removed:</div>
-    <div id="removeFromInner">
-      <p data-i18n="removed">Test on removed node</p>
-    </div>
 
-    <div>dynamically added:</div>
-    <div id="appendToInner"></div>
-    <div>
-      <button id="updateBtn" data-locize-editor-ignore="false">initial</button>
+      <hr />
+      <div class="filler"></div>
+      <div>dynamically removed:</div>
+      <div id="removeFromInner">
+        <p data-i18n="removed">Test on removed node</p>
+      </div>
+
+      <div>dynamically added:</div>
+      <div id="appendToInner"></div>
+      <div>
+        <button id="updateBtn" data-locize-editor-ignore="false">
+          initial
+        </button>
+      </div> -->
+    </div>
+    <div id="non-loc-i18next">
+      <h4>Some instrumented stuff</h4>
+      <p
+        data-i18n="translation:aNonI18nextKey;[title]common:anotherNonI18nextKey"
+        title="some non i18next title"
+      >
+        This is a translation from non i18next
+      </p>
+      <p data-i18n="aNonI18nextKey2" data-i18n-ns="aNonI18nextNS">
+        This is a translation from non i18next 2
+      </p>
+      <h4>Some uninstrumented stuff</h4>
+      <p>Welcome to test the i18next incontext editor</p>
+      <p>Welcome to test the fuzzy lookup incontext editor</p>
+      <p>
+        Something we practically don't have in our locize project and should not
+        be fuzzy found....
+      </p>
     </div>
     <script>
       process = {
@@ -68,7 +95,7 @@
     <script>
       // just simulating some interactivity adding, removing content
       setTimeout(function () {
-        var ele = document.body
+        var ele = document.getElementById('main')
 
         var btn = document.createElement('BUTTON')
         var t = document.createTextNode(i18next.t('common:button.clickMe'))
@@ -118,46 +145,52 @@ type="module"
         .use(locizeEditorPlugin({ show: true }))
         // .use(locizePlugin)
         .init(
-        {
-          lng: 'de',
-          fallbackLng: 'en',
-          debug: true,
-          ns: ['translation', 'common'],
-          defaultNS: 'translation',
-          saveMissing: true,
-          resources: {
-            de: {
-              translation: {
-                title: 'Willkommen beim Test für den i18next incontext editor'
-              }
-            },
-            en: {
-              translation: {
-                title: 'Welcome to test the i18next incontext editor',
-                introduction:
-                  'This page will create some <strong>basic content</strong> to test parsing DOM to find text nodes and pass them to the <i>editor.</i>',
-                removed: 'will get removed',
-                test: {
-                  title: 'Title attribute',
-                  placeholder: 'Placeholder attribute',
-                  alt: 'Alt attribute'
+          {
+            lng: 'de',
+            fallbackLng: 'en',
+            debug: true,
+            ns: ['translation', 'common'],
+            defaultNS: 'translation',
+            fallbackNS: ['fbNS1', 'fbNS2'],
+            preload: ['de', 'it'],
+            supportedLngs: ['en', 'de', 'it', 'fr', 'pt', 'en-US'],
+            saveMissing: true,
+            resources: {
+              de: {
+                translation: {
+                  title: 'Willkommen beim Test für den i18next incontext editor'
                 }
               },
-              common: {
-                button: {
-                  hoverMe: 'Hover this link',
-                  clickMe: 'Click this button',
-                  clickMeInner: 'Click another button'
+              en: {
+                translation: {
+                  title: 'Welcome to test the i18next incontext editor',
+                  introduction:
+                    'This page will create some <strong>basic content</strong> to test parsing DOM to find text nodes and pass them to the <i>editor.</i>',
+                  removed: 'will get removed',
+                  test: {
+                    title: 'Title attribute',
+                    placeholder: 'Placeholder attribute',
+                    alt: 'Alt attribute'
+                  }
+                },
+                common: {
+                  button: {
+                    hoverMe: 'Hover this link',
+                    clickMe: 'Click this button',
+                    clickMeInner: 'Click another button'
+                  }
                 }
               }
+            },
+            missingKeyHandler: (lng, ns, k, val, isUpdate, opts) => {
+              console.error(lng, ns, k, val)
             }
+          },
+          function (err, t) {
+            var localize = locI18next.init(i18next)
+            localize('#main')
           }
-        },
-        function (err, t) {
-          var localize = locI18next.init(i18next)
-          localize('#main')
-        }
-      )
+        )
     </script>
   </body>
 </html>
