fix locize.com links

--- a/debuggingApps/demo/index.html
+++ b/debuggingApps/demo/index.html
@@ -41,7 +41,7 @@
       <div>
         <h4>image - alt tag:</h4>
         <img
-          src="https://locize.com/img/locize_white.svg"
+          src="https://cdn.prod.website-files.com/67a323e323a50df7f24f0a6f/67b5d94bf07eacb4bcf9848c_locize_white.svg"
           alt="big a"
           style="width: 200px; background-color: #ccc"
           data-i18n="[alt]test.alt"
